Remove xetasuite-site prefix

--- a/src/content/docs/admin/permissions.mdx
+++ b/src/content/docs/admin/permissions.mdx
@@ -154,5 +154,5 @@ $user->can('material.delete');
 
 ## Prochaines étapes
 
-- [Gestion des rôles](/XetaSuite-Site/admin/roles/) - Assigner des permissions aux rôles
-- [Multi-Sites](/XetaSuite-Site/concepts/multi-sites/) - Permissions par site
+- [Gestion des rôles](/admin/roles/) - Assigner des permissions aux rôles
+- [Multi-Sites](/concepts/multi-sites/) - Permissions par site
