--- a/src/content/docs/admin/roles.mdx
+++ b/src/content/docs/admin/roles.mdx
@@ -108,5 +108,5 @@ DELETE /api/v1/roles/{id}
 
 ## Prochaines étapes
 
-- [Gestion des permissions](/XetaSuite-Site/admin/permissions/) - Permissions détaillées
-- [Gestion des utilisateurs](/XetaSuite-Site/admin/users/) - Assigner des rôles
+- [Gestion des permissions](/admin/permissions/) - Permissions détaillées
+- [Gestion des utilisateurs](/admin/users/) - Assigner des rôles
