--- a/src/content/docs/admin/users.mdx
+++ b/src/content/docs/admin/users.mdx
@@ -129,5 +129,5 @@ PATCH /api/v1/users/{id}
 
 ## Prochaines étapes
 
-- [Gestion des rôles](/XetaSuite-Site/admin/roles/) - Créer et configurer les rôles
-- [Gestion des permissions](/XetaSuite-Site/admin/permissions/) - Permissions granulaires
+- [Gestion des rôles](/admin/roles/) - Créer et configurer les rôles
+- [Gestion des permissions](/admin/permissions/) - Permissions granulaires
