--- a/src/content/docs/api/auth.mdx
+++ b/src/content/docs/api/auth.mdx
@@ -234,5 +234,5 @@ POST /api/v1/auth/reset-password
 
 ## Prochaines étapes
 
-- [Endpoints principaux](/XetaSuite-Site/api/endpoints/) - Référence API complète
-- [Authentification](/XetaSuite-Site/concepts/authentication/) - Comprendre le flow
+- [Endpoints principaux](/api/endpoints/) - Référence API complète
+- [Authentification](/concepts/authentication/) - Comprendre le flow
