--- a/src/content/docs/api/endpoints.mdx
+++ b/src/content/docs/api/endpoints.mdx
@@ -201,5 +201,5 @@ GET /companies?types[]=ITEM_PROVIDER&search=acme
 
 ## Prochaines étapes
 
-- [Auth API](/XetaSuite-Site/api/auth/) - Endpoints d'authentification
-- [Déploiement Production](/XetaSuite-Site/deployment/production/) - Mettre en ligne
+- [Auth API](/api/auth/) - Endpoints d'authentification
+- [Déploiement Production](/deployment/production/) - Mettre en ligne
