--- a/src/content/docs/concepts/authentication.mdx
+++ b/src/content/docs/concepts/authentication.mdx
@@ -140,5 +140,5 @@ SESSION_DOMAIN=.xetasuite.test  # Le point permet les sous-domaines
 
 ## Prochaines étapes
 
-- [Rôles & Permissions](/XetaSuite-Site/concepts/roles-permissions/) - Système de permissions
-- [Multi-Sites](/XetaSuite-Site/concepts/multi-sites/) - Permissions par site
+- [Rôles & Permissions](/concepts/roles-permissions/) - Système de permissions
+- [Multi-Sites](/concepts/multi-sites/) - Permissions par site
