--- a/src/content/docs/concepts/multi-sites.mdx
+++ b/src/content/docs/concepts/multi-sites.mdx
@@ -170,5 +170,5 @@ interface UserSite {
 
 ## Prochaines étapes
 
-- [Gestion Utilisateurs](/XetaSuite-Site/admin/users/) - Créer et gérer les utilisateurs
-- [Gestion des Rôles](/XetaSuite-Site/admin/roles/) - Configurer les rôles par site
+- [Gestion Utilisateurs](/admin/users/) - Créer et gérer les utilisateurs
+- [Gestion des Rôles](/admin/roles/) - Configurer les rôles par site
