--- a/src/content/docs/concepts/roles-permissions.mdx
+++ b/src/content/docs/concepts/roles-permissions.mdx
@@ -146,5 +146,5 @@ $role->givePermissionTo([
 
 ## Prochaines étapes
 
-- [Multi-Sites](/XetaSuite-Site/concepts/multi-sites/) - Gestion multi-tenant
-- [Gestion Utilisateurs](/XetaSuite-Site/admin/users/) - Administration des utilisateurs
+- [Multi-Sites](/concepts/multi-sites/) - Gestion multi-tenant
+- [Gestion Utilisateurs](/admin/users/) - Administration des utilisateurs
