--- a/src/content/docs/deployment/cron.mdx
+++ b/src/content/docs/deployment/cron.mdx
@@ -153,5 +153,5 @@ Schedule::command('backup:run')
 
 ## Prochaines étapes
 
-- [Queue Workers](/XetaSuite-Site/deployment/queue-workers/) - Configurer les workers
-- [Déploiement Production](/XetaSuite-Site/deployment/production/) - Guide complet
+- [Queue Workers](/deployment/queue-workers/) - Configurer les workers
+- [Déploiement Production](/deployment/production/) - Guide complet
