--- a/src/content/docs/deployment/production.mdx
+++ b/src/content/docs/deployment/production.mdx
@@ -191,5 +191,5 @@ server {
 
 ## Prochaines étapes
 
-- [Queue Workers](/XetaSuite-Site/deployment/queue-workers/) - Configurer les workers
-- [Cron & Scheduler](/XetaSuite-Site/deployment/cron/) - Tâches planifiées
+- [Queue Workers](/deployment/queue-workers/) - Configurer les workers
+- [Cron & Scheduler](/deployment/cron/) - Tâches planifiées
