--- a/src/content/docs/deployment/queue-workers.mdx
+++ b/src/content/docs/deployment/queue-workers.mdx
@@ -153,5 +153,5 @@ php artisan queue:flush
 
 ## Prochaines étapes
 
-- [Cron & Scheduler](/XetaSuite-Site/deployment/cron/) - Tâches planifiées
-- [Déploiement Production](/XetaSuite-Site/deployment/production/) - Guide complet
+- [Cron & Scheduler](/deployment/cron/) - Tâches planifiées
+- [Déploiement Production](/deployment/production/) - Guide complet
