--- a/src/content/docs/en/concepts/multi-sites.mdx
+++ b/src/content/docs/en/concepts/multi-sites.mdx
@@ -87,5 +87,5 @@ interface UserSite {
 
 ## Next Steps
 
-- [User Management](/XetaSuite-Site/en/admin/users/) - Create and manage users
-- [Role Management](/XetaSuite-Site/en/admin/roles/) - Configure roles per site
+- [User Management](/en/admin/users/) - Create and manage users
+- [Role Management](/en/admin/roles/) - Configure roles per site
