--- a/src/content/docs/en/index.mdx
+++ b/src/content/docs/en/index.mdx
@@ -13,11 +13,11 @@ hero:
 
   actions:
     - text: Get Started →
-      link: /XetaSuite-Site/en/getting-started/backend/
+      link: /en/getting-started/backend/
       icon: right-arrow
       variant: primary
     - text: View Demo
-      link: https://xetasuite.xetaravel.com
+      link: https://demo.xetasuite.xetaravel.com
       icon: external
       variant: minimal
 ---
@@ -103,29 +103,29 @@ import videoSrc from '../../../assets/xetasuite-presentation.mp4';
   <LinkCard
     title="Backend Installation"
     description="Set up the Laravel server with PostgreSQL in minutes."
-    href="/XetaSuite-Site/en/getting-started/backend/"
+    href="/en/getting-started/backend/"
   />
   <LinkCard
     title="Frontend Installation"
     description="Launch the React interface with Vite and connect to the API."
-    href="/XetaSuite-Site/en/getting-started/frontend/"
+    href="/en/getting-started/frontend/"
   />
   <LinkCard
     title="Authentication"
     description="Master the Sanctum SPA authentication flow (cookies)."
-    href="/XetaSuite-Site/en/concepts/authentication/"
+    href="/en/concepts/authentication/"
   />
   <LinkCard
     title="Multi-Site Architecture"
     description="Understand multi-tenant functionality with per-site permissions."
-    href="/XetaSuite-Site/en/concepts/multi-sites/"
+    href="/en/concepts/multi-sites/"
   />
 </CardGrid>
 
 <div class="demo-banner">
   <h3>🚀 Ready to try?</h3>
   <p>Explore XetaSuite with demo data. No registration required.</p>
-  <a href="https://xetasuite.xetaravel.com" class="demo-button">
+  <a href="https://demo.xetasuite.xetaravel.com" class="demo-button">
     Access demo →
   </a>
 </div>
