--- a/src/content/docs/getting-started/configuration.mdx
+++ b/src/content/docs/getting-started/configuration.mdx
@@ -115,5 +115,5 @@ VITE_API_URL=https://api.xetasuite.com
 
 ## Prochaines étapes
 
-- [Lancer en local](/XetaSuite-Site/getting-started/local/) - Démarrer l'environnement de développement
-- [Déploiement Production](/XetaSuite-Site/deployment/production/) - Mettre en production
+- [Lancer en local](/getting-started/local/) - Démarrer l'environnement de développement
+- [Déploiement Production](/deployment/production/) - Mettre en production
