--- a/src/content/docs/getting-started/local.mdx
+++ b/src/content/docs/getting-started/local.mdx
@@ -8,9 +8,9 @@ import { Steps, Tabs, TabItem, Aside } from '@astrojs/starlight/components';
 ## Prérequis
 
 Assurez-vous d'avoir complété :
-- [Installation Backend](/XetaSuite-Site/getting-started/backend/)
-- [Installation Frontend](/XetaSuite-Site/getting-started/frontend/)
-- [Configuration .env](/XetaSuite-Site/getting-started/configuration/)
+- [Installation Backend](/getting-started/backend/)
+- [Installation Frontend](/getting-started/frontend/)
+- [Configuration .env](/getting-started/configuration/)
 
 ## Démarrage rapide
 
@@ -138,5 +138,5 @@ npm run dev
 
 ## Prochaines étapes
 
-- [Authentification](/XetaSuite-Site/concepts/authentication/) - Comprendre le flow d'auth
-- [Multi-Sites](/XetaSuite-Site/concepts/multi-sites/) - Gestion multi-tenant
+- [Authentification](/concepts/authentication/) - Comprendre le flow d'auth
+- [Multi-Sites](/concepts/multi-sites/) - Gestion multi-tenant
