--- a/src/content/docs/guides/create-company.mdx
+++ b/src/content/docs/guides/create-company.mdx
@@ -110,5 +110,5 @@ Lorsqu'une Company est supprimée :
 
 ## Prochaines étapes
 
-- [Mouvements de pièces](/XetaSuite-Site/guides/item-movements/) - Gérer les entrées/sorties de stock
-- [Créer une maintenance](/XetaSuite-Site/guides/create-maintenance/) - Planifier une maintenance
+- [Mouvements de pièces](/guides/item-movements/) - Gérer les entrées/sorties de stock
+- [Créer une maintenance](/guides/create-maintenance/) - Planifier une maintenance
