--- a/src/content/docs/guides/item-movements.mdx
+++ b/src/content/docs/guides/item-movements.mdx
@@ -165,5 +165,5 @@ Lorsqu'une Company ou un User est supprimé :
 
 ## Prochaines étapes
 
-- [Créer une entreprise](/XetaSuite-Site/guides/create-company/) - Gérer les entreprises
-- [API Endpoints](/XetaSuite-Site/api/endpoints/) - Référence API complète
+- [Créer une entreprise](/guides/create-company/) - Gérer les entreprises
+- [API Endpoints](/api/endpoints/) - Référence API complète
