--- a/src/content/docs/guides/manage-incidents.mdx
+++ b/src/content/docs/guides/manage-incidents.mdx
@@ -159,5 +159,5 @@ POST /api/v1/incidents/{id}/create-maintenance
 
 ## Prochaines étapes
 
-- [Créer une maintenance](/XetaSuite-Site/guides/create-maintenance/) - Planifier une intervention
-- [Mouvements de pièces](/XetaSuite-Site/guides/item-movements/) - Gérer le stock
+- [Créer une maintenance](/guides/create-maintenance/) - Planifier une intervention
+- [Mouvements de pièces](/guides/item-movements/) - Gérer le stock
