--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -10,7 +10,7 @@ hero:
     file: ../../assets/logo-dark.svg
   actions:
     - text: Démarrer →
-      link: /XetaSuite-Site/getting-started/backend/
+      link: /getting-started/backend/
       icon: right-arrow
       variant: primary
     - text: Voir la démo
@@ -100,29 +100,29 @@ import videoSrc from '../../assets/xetasuite-presentation.mp4';
   <LinkCard
     title="Installation Backend"
     description="Configurez le serveur Laravel avec PostgreSQL en quelques minutes."
-    href="/XetaSuite-Site/getting-started/backend/"
+    href="getting-started/backend/"
   />
   <LinkCard
     title="Installation Frontend"
     description="Lancez l'interface React avec Vite et connectez-vous à l'API."
-    href="/XetaSuite-Site/getting-started/frontend/"
+    href="getting-started/frontend/"
   />
   <LinkCard
     title="Authentification"
     description="Maîtrisez le flow d'authentification Sanctum SPA (cookies)."
-    href="/XetaSuite-Site/concepts/authentication/"
+    href="concepts/authentication/"
   />
   <LinkCard
     title="Architecture Multi-Sites"
     description="Comprenez le fonctionnement multi-tenant avec permissions par site."
-    href="/XetaSuite-Site/concepts/multi-sites/"
+    href="concepts/multi-sites/"
   />
 </CardGrid>
 
 <div class="demo-banner">
   <h3>🚀 Prêt à essayer ?</h3>
   <p>Explorez XetaSuite avec des données de démonstration. Aucune inscription requise.</p>
-  <a href="https://demo.xetasuite.com" class="demo-button">
+  <a href="https://demo.xetasuite.xetaravel.com" class="demo-button">
     Accéder à la démo gratuite →
   </a>
 </div>
