--- a/src/content/docs/guides/create-maintenance.mdx
+++ b/src/content/docs/guides/create-maintenance.mdx
@@ -147,5 +147,5 @@ PATCH /api/v1/maintenances/{id}
 
 ## Prochaines étapes
 
-- [Gérer les incidents](/XetaSuite-Site/guides/manage-incidents/) - Signaler et suivre les incidents
-- [Mouvements de pièces](/XetaSuite-Site/guides/item-movements/) - Gérer le stock
+- [Gérer les incidents](/guides/manage-incidents/) - Signaler et suivre les incidents
+- [Mouvements de pièces](/guides/item-movements/) - Gérer le stock
